[logic2] Logic sample 2, increment and decrement

--- a/index.html
+++ b/index.html
@@ -161,6 +161,7 @@ window.onload = function() {
 // num_circle_cols   - The number of columns in the circles display.
 var sample_list = [
     { menu_name: 'Ex 3.1: Logic 1', id: 'logic1', num_qubits: 3, num_instructions: 17, num_circle_cols: 8, num_circle_rows: 1, circle_scale: 1.0, gate_scale: 1.0},
+    { menu_name: 'Ex 3.2: Logic 2', id: 'logic2', num_qubits: 4, num_instructions: 17, num_circle_cols: 16, num_circle_rows: 1, circle_scale: 1.0, gate_scale: 1.0},
 
     { menu_name: 'Ex 6.1: Grover 1', id: 'grover1', num_qubits: 4, num_instructions: 12, num_circle_cols: 16, num_circle_rows: 1, circle_scale: 1.0, gate_scale: 1.0},
     { menu_name: 'Ex 6.2: Grover 2', id: 'grover2', num_qubits: 4, num_instructions: 39, num_circle_cols: 4, num_circle_rows: 4, circle_scale: 1.0, gate_scale: 1.0},
@@ -377,6 +378,39 @@ qc.cnot(4, 1|2);
 qc.nop();
 qc.read(1|2|4);
 qc.codeLabel('');
+qc.nop();
+</textarea>
+
+<textarea id="logic2" style="display:none;">
+// Initialize
+num_qubits = 4;
+qc_options.color_by_phase = true;
+qc.reset(num_qubits);
+a = qint.new(num_qubits, 'a');
+
+// prepare
+qc.codeLabel('prepare');
+a.write(1);
+a.hadamard(0x4);
+a.phase(45, 0x4);
+qc.codeLabel('');
+
+qc.nop();
+qc.nop();
+
+// increment
+qc.codeLabel('increment');
+a.add(1);
+qc.codeLabel('');
+
+qc.nop();
+qc.nop();
+
+// increment
+qc.codeLabel('decrement');
+a.subtract(1);
+qc.codeLabel('');
+
 qc.nop();
 </textarea>
 
